8th commit with all user show and open friends ui complete. List item click not working.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Homepage"></activity>
+        <activity android:name=".OpenUser"></activity>
+        <activity android:name=".FindFriends" />
+        <activity android:name=".Homepage" />
         <activity android:name=".Registration_part3" />
         <activity android:name=".Registration_part2" />
         <activity android:name=".Registration" />
