--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation "com.android.support:support-core-utils:30.0.0"
 
     implementation "de.hdodenhof:circleimageview:2.1.0"
+    implementation "androidx.cardview:cardview:1.0.0"
 
 }
