--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MyProfile"></activity>
+        <activity android:name=".FriendRequests_Page"></activity>
+        <activity android:name=".MyProfile" />
         <activity android:name=".OpenUser" />
         <activity android:name=".FindFriends" />
         <activity android:name=".Homepage" />
